Fixed icon alignment on menu Fixed router-outlet viewport size

--- a/src/app/nav/nav.component.scss
+++ b/src/app/nav/nav.component.scss
@@ -15,3 +15,13 @@
   flex-direction: row;
   align-items: center;
 }
+
+.aligned-with-icon{
+  position: absolute;
+  margin-top: 2px;
+  margin-left: 5px; /* optional */
+}
+
+.router-window {
+  min-height: 100vh;
+}
